force-app/main/default/objects/Catalogo_FSC__mdt/fields/Clave__c.field-meta.xml
<CustomField>
    <fullName>Clave__c</fullName>
    <description>Clave</description>
    <label>Clave</label>
    <length>255</length>
    <type>Text</type>
</CustomField>