force-app/main/default/objects/Catalogo_FSC__mdt/fields/Clave_padre__c.field-meta.xml
<CustomField>
    <fullName>Clave_padre__c</fullName>
    <description>Clave del abuelo. Si es familia o subfamilia este dato esta vacio. En el caso de la clase, es la clave de la familia a la cual pertenece la clase</description>
    <label>Clave padre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>