force-app/main/default/objects/Catalogo_FSC__mdt/fields/Clave_padre_inmediato__c.field-meta.xml
<CustomField>
    <fullName>Clave_padre_inmediato__c</fullName>
    <description>Clave del padre inmediato, en el caso de familias no tuene valor, en el caso de tipo subfamilia es la clave de la familia a la que pertenece, en el caso de clase es la clave de la subfamilia a la que pertenece</description>
    <label>Clave padre inmediato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>