force-app/main/default/objects/Catalogo_FSC__mdt/fields/id_href__c.field-meta.xml
<CustomField>
    <fullName>id_href__c</fullName>
    <description>identificador del elemento href del catalogo</description>
    <label>id href</label>
    <length>100</length>
    <type>Text</type>
</CustomField>