force-app/main/default/objects/Catalogo_FSC__mdt/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <description>Ruta de la imagen a mostrar en el catalogo</description>
    <label>Imagen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>