force-app/main/default/objects/Catalogo_FSC__mdt/fields/ImagenSubF__c.field-meta.xml
<CustomField>
    <fullName>ImagenSubF__c</fullName>
    <description>Imagen de Familia en la pagina de subfamilia</description>
    <label>ImagenSubF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>