force-app/main/default/objects/Catalogo_FSC__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Determina si es Familia, subfamilia o clase</description>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>